quickstart-deploy/confluent-platform-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlcenter-lb
  namespace: confluent
spec:
  type: LoadBalancer
  selector:
    app: controlcenter
  ports:
  - protocol: TCP
    port: 9021
    targetPort: 9021
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-lb
  namespace: confluent
spec:
  type: LoadBalancer
  selector:
    app: kafka
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: schemaregistry-lb
  namespace: confluent
spec:
  type: LoadBalancer
  selector:
    app: schemaregistry
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ksqldb-lb
  namespace: confluent
spec:
  type: LoadBalancer
  selector:
    app: ksqldb
  ports:
  - protocol: TCP
    port: 8088
    targetPort: 8088
