quickstart-deploy/confluent-platform-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-without-sni
  namespace: confluent
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path:
            backend:
              serviceName: kafka-0-internal
              servicePort: 9092
          - path:
            backend:
              serviceName: kafka-1-internal
              servicePort: 9092
          - path:
            backend:
              serviceName: kafka-2-internal
              servicePort: 9092
